Native/Test/KL/missing-function.out
missing-function.kl:2:10: error: no such function foo(String, Integer, Boolean)
