Native/Test/KL/missing-function.kl
operator entry() {
  report foo("Hello", 42, true);
}
